[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.3.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = [ "no-entrypoint" ] } 
solana-program = "1.17.18"
borsh = "0.10.3"
bytemuck = "1.14.1"
lib-sokoban = "=0.3.0" 
num_enum = "0.7.2"
itertools = "0.12.0"
thiserror = "1.0.56"
ellipsis-macros = "=0.1.1" 
solana-security-txt = "1.1.1"
static_assertions = "=1.1.0"
